; ModuleID = '/home/carl/AnghaBench/nginx-rtmp-module/extr_ngx_rtmp_send.c_ngx_rtmp_create_bandwidth.c'
source_filename = "/home/carl/AnghaBench/nginx-rtmp-module/extr_ngx_rtmp_send.c_ngx_rtmp_create_bandwidth.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i32 }

@NGX_LOG_DEBUG_RTMP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [40 x i8] c"create: bandwidth ack_size=%uD limit=%d\00", align 1
@NGX_RTMP_MSG_BANDWIDTH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ngx_rtmp_create_bandwidth(%struct.TYPE_7__* %0, i32 %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_7__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %5, align 8
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  %8 = load i32, i32* @NGX_LOG_DEBUG_RTMP, align 4
  %9 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %10 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %9, i32 0, i32 0
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* %6, align 4
  %15 = load i64, i64* %7, align 8
  %16 = trunc i64 %15 to i32
  %17 = call i32 @ngx_log_debug2(i32 %8, i32 %13, i32 0, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0), i32 %14, i32 %16)
  %18 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %19 = load i32, i32* @NGX_RTMP_MSG_BANDWIDTH, align 4
  %20 = call i32 @NGX_RTMP_USER_START(%struct.TYPE_7__* %18, i32 %19)
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @NGX_RTMP_USER_OUT4(i32 %21)
  %23 = load i64, i64* %7, align 8
  %24 = call i32 @NGX_RTMP_USER_OUT1(i64 %23)
  %25 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %26 = call i32 @NGX_RTMP_USER_END(%struct.TYPE_7__* %25)
  %27 = load i32*, i32** %4, align 8
  ret i32* %27
}

declare dso_local i32 @ngx_log_debug2(i32, i32, i32, i8*, i32, i32) #1

declare dso_local i32 @NGX_RTMP_USER_START(%struct.TYPE_7__*, i32) #1

declare dso_local i32 @NGX_RTMP_USER_OUT4(i32) #1

declare dso_local i32 @NGX_RTMP_USER_OUT1(i64) #1

declare dso_local i32 @NGX_RTMP_USER_END(%struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
